# RowMajor_vs_ColumnMajor

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
